# serde-human-bytes

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: base64.rs  bytearray.rs  bytebuf.rs  bytes.rs  de.rs  lib.rs  ser.rs
src/base64/: de.rs  ser.rs
tests/: test_derive.rs  test_partialeq.rs  test_serde.rs
