[package]
name = "serde-human-bytes"
version = "0.1.0"
edition = "2021"
description = "Smart serializing and deserializing bytes"
license = "MIT"
repository = "https://github.com/kvinwang/serde-human-bytes"
documentation = "https://docs.rs/serde-human-bytes"
authors = ["Kevin Wang <wy721@qq.com>"]
keywords = ["serde", "hex", "bytes"]
categories = ["encoding"]

[dependencies]
hex = "0.4.3"
serde = "1.0.214"

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
