[package]
name = "serde-human-bytes"
version = "0.1.2"
authors = ["David Tolnay <dtolnay@gmail.com>", "Kevin Wang<wy721@qq.com>"]
categories = ["encoding", "no-std"]
description = "Optimized handling of `&[u8]` and `Vec<u8>` for Serde"
documentation = "https://docs.rs/serde-human-bytes"
edition = "2018"
keywords = ["serde", "serialization", "no_std", "bytes"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kvinwang/serde-human-bytes"
rust-version = "1.53"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
base64 = { version = "0.13.1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.166", default-features = false, features = ["alloc"] }

[dev-dependencies]
bincode = "1.3.3"
serde_derive = "1.0.166"
serde_test = "1.0.166"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
